--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,27 +1,51 @@
-.clickerTitle {
-    font-family: 'DotGothic16', sans-serif;
-    font-size: 40px;
-    padding: 10px;
-}
-.navBar {
-    background-color: #F5DEB3;
-    font-family: 'DotGothic16', sans-serif;
-    ;
-}
-
-a.navBar {
-    display: block;
-    text-align: center;
-    padding: 2px;
-    border: 5px;
-    color: white;
-}
-
-
-#coffeeTracker {
-    background-color: #F5DEB3;
-    font-family: 'DotGothic16', sans-serif;
+.card {
+    background-color: #F5DEB3;    
 }
 body {
     background-color: #DEB887;
+    font-family: 'DotGothic16', sans-serif;
 }
+
+.btn-primary {
+    background-color: #d2691e;
+    border-color: #d2691e;
+}
+.btn-primary:hover {
+    background-color: #deb887;
+    border-color: #fff;
+}
+.active .btn-primary:hover {
+    background-color: #deb887;
+    border-color: #fff;
+}
+
+
+.btn-primary {
+    color: #fff;
+    background-color: #d2691e;
+    border-color: #d2691e;
+  }
+  .btn-primary:hover {
+    color: #fff;
+    background-color: #ff7f50;
+    border-color: #ff7f50;
+  }
+  .btn-primary:focus, .btn-primary.focus {
+    color: #fff;
+    background-color: #ff7f50;
+    border-color: #ff7f50;
+    box-shadow: 0 0 0 0.2rem rgba(238, 134, 36, 0.5);
+  }
+  .btn-primary.disabled, .btn-primary:disabled {
+    color: #fff;
+    background-color: #d2691e;
+    border-color: #d2691e;
+  }
+  .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
+    color: #fff;
+    background-color: #ff7f50;
+    border-color: #ff7f50;
+  }
+  .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-primary.dropdown-toggle:focus {
+    box-shadow: 0 0 0 0.2rem rgba(152, 200, 76, 0.5);
+  }
