Utilized bootstrap classes & grid

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,23 +13,29 @@
     <title>Coffee Clicker</title>
   </head>
   <body>
-    <div class="clickerTitle">
-      <h1>Coffee Clicker</h1>
-    </div>
-    <div class="navBar">
-      <a href="#">Upgrades</a>
-      <a href="#">Achievements</a>
-      <a href="#">Prestige</a>
-      <a href="#">Donate</a>
-
-    </div>
-    <div class="container-fluid">
-      <div>
-          <button type="button" class="btn btn-primary" id="moneyButton">Click for more coffee</button>
+    
+    <div class="container">
+      <div class="row">
+        <div class="col-12 text-center">
+          <h1>Coffee Clicker</h1>
+        </div>
       </div>
-      <br><br>
-      <div id="coffeeTracker">
-        <strong>Cups of Coffee: <p id="money"></p></strong>
+      <nav class="nav-bar navbar-light text-center">
+        <a href="#">Upgrades</a>
+        <a href="#">Achievements</a>
+        <a href="#">Prestige</a>
+        <a href="#">Donate</a>
+  
+      </nav>
+      <div class="row align-items-center mb-2">
+        <div class="col-12">
+          <button type="button" class="btn btn-primary" id="moneyButton">Click for more coffee</button>
+        </div>
+      </div>
+      <div class="card mb-2">
+        <div class="card-body">
+          <strong>Cups of Coffee: <p id="money"></p></strong>
+        </div>
       </div>
     </div>
 
