Moved upgrades to card on index

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,11 +21,9 @@
         </div>
       </div>
       <nav class="nav-bar navbar-light text-center">
-        <a href="#">Upgrades</a>
         <a href="#">Achievements</a>
         <a href="#">Prestige</a>
         <a href="#">Donate</a>
-  
       </nav>
       <div class="row align-items-center mb-2">
         <div class="col-12">
@@ -35,6 +33,13 @@
       <div class="card mb-2">
         <div class="card-body">
           <strong>Cups of Coffee: <p id="money"></p></strong>
+        </div>
+      </div>
+      <div class="card mb-2">
+        <div class="card-header">
+          <h2>Upgrades</strong>
+        </div>
+        <div class="card-body">
         </div>
       </div>
     </div>
