Centered more components, spacing

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,24 +20,27 @@
           <h1>Coffee Clicker</h1>
         </div>
       </div>
-      <nav class="nav-bar navbar-light text-center">
+      <nav class="nav-bar navbar-light text-center mb-2">
         <a href="#">Achievements</a>
         <a href="#">Prestige</a>
         <a href="#">Donate</a>
       </nav>
-      <div class="row align-items-center mb-2">
+      <div class="row align-items-center text-center mb-2">
         <div class="col-12">
           <button type="button" class="btn btn-primary" id="moneyButton">Click for more coffee</button>
         </div>
       </div>
       <div class="card mb-2">
-        <div class="card-body">
+        <div class="card-header">
+          <h4>Resources</h4>
+        </div>
+        <div class="card-body text-center">
           <strong>Cups of Coffee: <p id="money"></p></strong>
         </div>
       </div>
       <div class="card mb-2">
         <div class="card-header">
-          <h2>Upgrades</strong>
+          <h4>Upgrades</h4>
         </div>
         <div class="card-body">
         </div>
